[project]
name = "arcpy_auth_manager"
version = "0.0.1"
description = ""
readme = "README.md"

requires-python = ">=3.8"

[project.optional-dependencies]
dev-requirements = {file = "dev-requirements.txt"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"







